# taskgenie

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN_ARCHITECTURE.md  DESIGN_DATA.md  INDEX.md  Makefile  PLAN.md  README.md  REQUIREMENTS_AUDIT.md  pyproject.toml
.cursor/commands/: fix-unit.md  post-review.md  pr-desc.md  review-implement.md  review-validate.md  review.md  test-ac.md
.github/workflows/: ci.yml  docs.yml
backend/: __init__.py  config.py  database.py  logging.py  main.py  middleware.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  tasks.py  telemetry.py
backend/cli/: __init__.py  db.py  main.py
backend/cli/schemas/: task.py
backend/integrations/: __init__.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial_schema.py
backend/models/: __init__.py  attachment.py  chat_history.py  config.py  notification.py  task.py
backend/schemas/: __init__.py  attachment.py  chat.py  task.py
backend/services/: __init__.py  llm_service.py  task_service.py
docs/: DEVELOPER_QUICKSTART.md  DOCUMENTATION_EVALUATION.md  INDEX.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/00-research/: COMPARISON_SUMMARY.md  MARKET_RESEARCH.md
docs/01-design/: API_REFERENCE.md  DECISIONS.md  DESIGN_ARCHITECTURE.md  DESIGN_BACKGROUND_JOBS.md  DESIGN_CHAT.md  DESIGN_CLI.md  DESIGN_DATA.md  DESIGN_NOTIFICATIONS.md  DESIGN_SUMMARY.md  DESIGN_TUI.md  DESIGN_WEB.md  DOCS_STRUCTURE.md  INTEGRATION_GUIDE.md  REQUIREMENTS_AUDIT.md
docs/02-implementation/: AGENT_GUIDE.md  MIGRATIONS.md  PLAN.md  PLAN_ARCHIVE.md  PR-PLANS.md  SKILL_ENRICHMENT_SUMMARY.md  TESTING_GUIDE.md
docs/02-implementation/pr-specs/: INDEX.md  PR-001-db-config.md  PR-002-task-crud-api.md  PR-003-1-llm-provider.md  PR-003-2-streaming-chat-api.md  PR-003-3-tui-chat-integration.md  PR-003-llm-chat-backbone.md  PR-003B-agent-tool-calling.md  PR-004-attachments-link-detection.md  PR-005-1-chromadb-embeddings.md  PR-005-2-semantic-search-rag.md  PR-005-rag-semantic-search.md  PR-006-gmail-integration.md  PR-007-github-integration.md  PR-008-interactive-tui.md  PR-009-cli-subcommands.md  PR-010-web-ui.md  PR-011-notifications.md  PR-012-deployment-docs.md  PR-013-event-system.md  PR-014-multi-agent-orchestration.md  PR-015-agent-ux-panel.md  PR-016-observability-baseline.md  PR-017-db-config-followups.md  TEMPLATE.md
docs/02-implementation/test-results/: README.md
reviews/: REVIEW_c-pr-001-db-config.md
scripts/: check_docs.py
tests/: __init__.py  conftest.py  test_backend_init.py  test_cli_db.py  test_cli_db_extended.py  test_config.py  test_config_extended.py  test_database.py  test_database_extended.py  test_logging.py  test_main.py  test_middleware.py  test_migrations_env.py  test_models.py
tests/api/: __init__.py  test_tasks.py  test_telemetry.py
tests/cli/: __init__.py  test_db.py  test_main.py
tests/models/: __init__.py  test_attachment.py  test_notification.py  test_task.py
tests/schemas/: __init__.py  test_init.py
tests/services/: test_task_service.py
