[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-todo"
version = "0.1.0"
description = "CLI-first, AI-native personal task manager with RAG-powered search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "User", email = "user@example.com" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "google-api-python-client>=2.100.0",
    "PyGithub>=1.59",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "plyer>=0.1.2",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "ipython>=8.12.0",
]

[project.scripts]
tgenie = "backend.cli.main:app"
taskgenie = "backend.cli.main:app"

[tool.hatchling.scripts]
# No custom build scripts needed

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["personal_todo"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "typer"]
split-on-trailing-comma = false

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
