[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-todo"
version = "0.1.0"
description = "CLI-first, AI-native personal task manager with RAG-powered search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "User", email = "user@example.com" }
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "ipython>=8.12.0",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
]

# Feature-specific optional dependencies grouped by PR number.
# Each PR adds a feature set with its own dependencies.
# See docs/02-implementation/pr-specs/INDEX.md for PR specifications.
# These groups remain separate to allow selective installation of features.
# After all PRs are merged, these groups will remain as feature flags for optional functionality.
pr002_api = [  # PR-002: Task CRUD API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
]

pr003_llm = [  # PR-003: LLM Service & Chat Backbone
    "openai>=1.3.0",
    "httpx>=0.25.0",
]

pr005_rag = [  # PR-005: RAG + Semantic Search
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
]

pr006_gmail = [  # PR-006: Gmail Integration
    "google-api-python-client>=2.100.0",
]

pr007_github = [  # PR-007: GitHub Integration
    "PyGithub>=1.59",
]

pr011_notifications = [  # PR-011: Notifications Service
    "apscheduler>=3.10.4",
    "plyer>=0.1.2",
]

# Install all optional dependencies
all = [
    "personal-todo[dev,pr002_api,pr003_llm,pr005_rag,pr006_gmail,pr007_github,pr011_notifications]",
]

[project.scripts]
tgenie = "backend.cli.main:app"

[tool.hatchling.scripts]
# No custom build scripts needed

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Rule selection: all rules are explicitly listed in select.
# extend-select is additive (adds to select), but since we explicitly set select,
# we consolidate everything here for clarity.
select = [
    "E",  # pycodestyle errors (includes E402: module-import-not-at-top-of-file)
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP",  # pyupgrade
    "C90",  # McCabe complexity
    "PLR",  # Pylint refactor
    "D100",  # pydocstyle: undocumented-public-module - Requires module docstrings
    "PLC0415",  # pylint: import-outside-top-level - Enforces imports at module top-level
]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["F841"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["backend"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "typer"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["backend"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
