[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-todo"
version = "0.1.0"
description = "CLI-first, AI-native personal task manager with RAG-powered search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "User", email = "user@example.com" }
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.23",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
# Development dependencies (includes FastAPI for backend and tests)
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "ipython>=8.12.0",
    # FastAPI dependencies (required for backend/main.py and tests)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
]

# Install all optional dependencies
all = [
    "personal-todo[dev]",
]

[project.scripts]
tgenie = "backend.cli.main:app"

[tool.hatchling.scripts]
# No custom build scripts needed

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Rule selection: all rules are explicitly listed in select.
# extend-select is additive (adds to select), but since we explicitly set select,
# we consolidate everything here for clarity.
select = [
    "E",  # pycodestyle errors (includes E402: module-import-not-at-top-of-file)
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP",  # pyupgrade
    "C90",  # McCabe complexity
    "PLR",  # Pylint refactor
    "D100",  # pydocstyle: undocumented-public-module - Requires module docstrings
    "PLC0415",  # pylint: import-outside-top-level - Enforces imports at module top-level
]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["F841"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["backend"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy", "typer"]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = true
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["backend"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
